# Lab08

./: CMakeLists.txt  robot.h  scara.cpp  scara.h  scara_main.cpp
